[tool.poetry]
name = "mltoolkit"            
version = "0.1.0"
description = "Toolkit reutilizável de ML"
authors = ["Pedro Beriotto <beriottopedro@gmail.com>"]
readme = "README.md"
packages = [{ include = "mltoolkit", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^1.26"
joblib = "^1.4"
scikit-learn = {version = "^1.5", optional = true}
xgboost      = {version = "^2.0", optional = true}

[tool.poetry.extras]
tabular = ["scikit-learn", "xgboost"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
ruff = "^0.4"
black = "^24.4"
pre-commit = "^3.7"

[tool.poetry.scripts]
mltoolkit = "mltoolkit.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ----- Lint / format configs -----
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
extend-select = ["I"]   # sort imports
